Changement link Shop et font Chéri

--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,5 @@
 .tamere {
-  background-image: url("C:\Users\Kevin\cheri-test\src\photos_khai\DSC03059.jpg");
+  background-image: url("./photos_khai/DSC03059.jpg");
   background-size: cover;
   background-position: 50% 37%;
   min-height: 100vh;
