background-position fix

--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,7 @@
 .tamere {
   background-image: url("../public/photos_khai/DSC03059.jpg");
   background-size: cover;
-  background-position: center;
+  background-position: 50% 37%;
   min-height: 100vh;
   margin: 0;
 }
-
